Las ventanas de las rutas 1 a la 20 ya estan, solo faltan los idiomas y los demas marks, esos los terminara eliel

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -6,6 +6,8 @@
     "BaseI": "Route {ruta} Going",
     "BaseR": "Route {ruta} Return",
 
+    "Foranea": "Foreign Route {ruta}",
+
     "ForaneaI": "Foreign Route {ruta} Going",
     "ForaneaR": "Foreign Route {ruta} Return",
 
