--- a/lib/l10n/intl_fr_HT.arb
+++ b/lib/l10n/intl_fr_HT.arb
@@ -6,6 +6,8 @@
     "BaseI": "Wout {ruta} Alé",
     "BaseR": "Wout {ruta} Tounen",
 
+    "Foranea": "Chimen Etranje {ruta}",
+
     "ForaneaI": "Chimen Etranje {ruta} Ale",
     "ForaneaR": "Chimen Etranje {ruta} Retounen",
 
