--- a/lib/l10n/intl_ht.arb
+++ b/lib/l10n/intl_ht.arb
@@ -6,6 +6,8 @@
     "BaseI": "Wout {ruta} Ale",
     "BaseR": "Wout {ruta} Tounen",
 
+    "Foranea": "Wout Ayisyen {ruta}",
+
     "ForaneaI": "Wout Ayisyen {ruta} Ale",
     "ForaneaR": "Wout Ayisyen {ruta} Retounen",
 
