YA ESTA AHORA SI

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -29,6 +29,8 @@
     "Conductor":"Driver",
     "NumCombi":"Combi Number",
 
+    "Hora":"Check-in and check-out time:",
+
     "language": "Language",
     "systemLanguage": "System Language"
 }
