--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -29,6 +29,8 @@
     "Conductor":"Conductor",
     "NumCombi":"Numero de Combi",
 
+    "Hora": "Hora de entrada y salida:",
+
     "language": "Idioma",
     "systemLanguage": "Idioma del Sistema"
 }
