--- a/lib/l10n/intl_fr_HT.arb
+++ b/lib/l10n/intl_fr_HT.arb
@@ -29,6 +29,8 @@
     "Conductor":"Kondiktè",
     "NumCombi":"Nimewo Konbi",
 
+    "Hora":"Moment antre ak moman soti:",
+
     "language": "Lang",
     "systemLanguage": "Lang Sistèm"
 }
