--- a/lib/l10n/intl_ht.arb
+++ b/lib/l10n/intl_ht.arb
@@ -29,6 +29,8 @@
     "Conductor":"Kondiktè",
     "NumCombi":"Nimewo Konbi",
 
+    "Hora":"Moment antre ak moman soti:",
+
     "language": "Language",
     "systemLanguage": "System Language"
 }
